<resources>
   <string name="app_name">Open folder</string>
   <string name="buka_galeri">Buka Galeri</string>
   <string name="todo">TODO</string>
   <string name="go_to_activity_2">go to activity 2</string>
   <string name="welcome_to_activity_2">Welcome to Activity 2</string>
   <string name="nama">Nama</string>
   <string name="e_mail">E-mail</string>
   <string name="no_tlp">No.Tlp</string>
   <string name="isikan_data_diri">Isikan data diri</string>
   <string name="submit">Submit</string>
</resources>