<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"

    tools:context=".Activity2">

   <EditText
       android:id="@+id/editTextTextPersonName"
       android:layout_width="226dp"
       android:layout_height="41dp"
       android:layout_marginStart="88dp"
       android:layout_marginTop="192dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/nama"
       android:inputType="textPersonName"
       android:textColor="@color/white"
       android:textColorHint="@color/cardview_shadow_start_color"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="172dp"
       android:layout_height="41dp"
       android:layout_marginStart="116dp"
       android:layout_marginTop="136dp"
       android:text="@string/isikan_data_diri"
       android:textAllCaps="true"
       android:textColor="@color/white"
       android:textDirection="firstStrong"
       android:textSize="20sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <EditText
       android:id="@+id/editTextPhone"
       android:layout_width="225dp"
       android:layout_height="40dp"
       android:layout_marginStart="88dp"
       android:layout_marginTop="240dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/no_tlp"
       android:inputType="phone"
       android:textColor="@color/white"
       android:textColorHint="@color/cardview_shadow_start_color"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <Button
       android:id="@+id/button3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="160dp"
       android:layout_marginTop="336dp"
       android:text="@string/submit"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <EditText
       android:id="@+id/editTextTextEmailAddress"
       android:layout_width="226dp"
       android:layout_height="41dp"
       android:layout_marginStart="88dp"
       android:layout_marginTop="288dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/e_mail"
       android:inputType="textEmailAddress"
       android:textColor="@color/white"
       android:textColorHint="@color/cardview_shadow_start_color"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>